--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Calculator</title>
 
 </head>
-<link rel="stylesheet" href="/src/css/style.css">
+<link rel="stylesheet" href="css/style.css">
 
 <body>
     <div class=" container">
@@ -36,9 +36,11 @@
         <div class="item_equal" onclick="equal()">=</div>
     </div>
 
-    <script src="/src/js/script.js" >
+    <script src="js/script.js" >
 
     </script>
 
 
 </body>
+
+</html>
